--- a/fluent-package/templates/etc/fluent/fluentd.conf
+++ b/fluent-package/templates/etc/fluent/fluentd.conf
@@ -5,7 +5,14 @@
 <% if windows? %>
 <system>
   <log>
+    path "#{ENV['FLUENT_PACKAGE_TOPDIR']}/fluentd.log"
     rotate_age 30
+  </log>
+</system>
+<% else %>
+<system>
+  <log>
+    path /var/log/<%= package_dir %>/<%= service_name %>.log
   </log>
 </system>
 <% end %>
