--- a/fluent-package/Rakefile
+++ b/fluent-package/Rakefile
@@ -314,7 +314,7 @@ class DownloadTask
         dirname = "fluentd-#{FLUENTD_REVISION}"
         rm_rf("fluentd") if File.exist?("fluentd")
         rm_rf(dirname) if File.exist?(dirname)
-        sh("git", "clone", "https://github.com/fluent/fluentd.git")
+        sh("git", "clone", "https://github.com/Watson1978/fluentd.git")
         cd("fluentd") do
           sh("git", "checkout", FLUENTD_REVISION)
         end
