deb: suppress service restart by needrestart
Since Ubuntu 24.04, needrestart package kicks service
restart out of package maintainer scripts.
Take back fluentd service under control for us,
it had better to suppress it.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/fluent-package/Rakefile
+++ b/fluent-package/Rakefile
@@ -1187,6 +1187,10 @@ class BuildTask
                      "etc/logrotate.d/#{SERVICE_NAME}",
                      fluentd_conf_default,
                    ]) unless windows? || macos?
+    if File.read("/etc/os-release") =~ /VERSION_CODENAME=noble/
+      puts "Suppress needrestart on Ubuntu 24.04 (Noble)"
+      configs.concat(["etc/needrestart/conf.d/50-fluent-package.conf"])
+    end
     configs.each do |config|
       src =
         if config == fluentd_conf_default
