--- a/.github/workflows/yum.yml
+++ b/.github/workflows/yum.yml
@@ -124,6 +124,7 @@ jobs:
           - "update-to-next-version-service-status.sh enabled inactive"
           - "update-to-next-version-service-status.sh disabled active"
           - "update-to-next-version-service-status.sh disabled inactive"
+          - "update-to-next-version-without-data-lost.sh"
         include:
           - label: AmazonLinux 2 x86_64
             rake-job: amazonlinux-2
@@ -182,6 +183,7 @@ jobs:
           - "update-to-next-version-service-status.sh enabled inactive"
           - "update-to-next-version-service-status.sh disabled active"
           - "update-to-next-version-service-status.sh disabled inactive"
+          - "update-to-next-version-without-data-lost.sh"
         include:
           - label: RockyLinux 8 x86_64
             rake-job: rockylinux-8
