--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -175,9 +175,10 @@ jobs:
           - "update-to-next-version-service-status.sh enabled inactive"
           - "update-to-next-version-service-status.sh disabled active"
           - "update-to-next-version-service-status.sh disabled inactive"
-          - "update-to-next-version-without-data-lost.sh"
           - "update-to-next-version-with-auto-and-manual.sh"
           - "update-to-next-major-version.sh"
+          - "update-without-data-lost.sh v5 v6"
+          - "update-without-data-lost.sh v6 v5"
         include:
           - label: Debian bullseye amd64
             rake-job: debian-bullseye
