--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -1,11 +1,10 @@
-name: Bundle Update on Windows
+name: Windows Bundle Update
 
 on:
   workflow_dispatch
 
 jobs:
   bundle-update:
-    name: Bundle Update
     runs-on: windows-latest
     steps:
       - name: Set up Ruby
@@ -15,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Bundle Update
         run: |
+          cd fluent-package
           bundle update
       - uses: peter-evans/create-pull-request@v5
         with:
