--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -18,6 +18,7 @@ jobs:
           gem install bundler:2.3.27
           bundle update -j 4
       - uses: peter-evans/create-pull-request@v5
+      - name: Create Pull Request
         with:
           commit-message: Update Gemfile.lock
           delete-branch: true
