--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           cd fluent-package
           gem install bundler:2.3.27
-          bundle update -j 4
+          bundle _2.3.27_ update -j 4
       - name: Git commit
         run: |
           today=$(date "+%Y%m%d")
