--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   bundle-update:
     runs-on: windows-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -17,6 +19,17 @@ jobs:
           cd fluent-package
           gem install bundler:2.3.27
           bundle _2.3.27_ update -j 4
+      - name: git config
+        run: |
+          git config user.name ${{ github.event.pusher.name }}
+          git config user.email ${{ github.event.pusher.email }}
+      - name: git commit
+        run: |
+          $today = Get-Date -format "yyyyMMdd"
+          git branch "bundle-update/${today}"
+          git add fluent-package/Gemfile.lock
+          git commit -m "Update Gemfile.lock"
+          git rebase HEAD~1 --signoff
       - name: Create Pull Request
         run: |
-          gh create pr  --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
+          gh create pr --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
