--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -23,11 +23,13 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - name: Create Pull Request
+      - name: git commit
         run: |
           $today = Get-Date -format "yyyyMMdd"
           git branch "bundle-update/${today}"
           git add fluent-package/Gemfile.lock
           git commit -m "Update Gemfile.lock"
           git rebase HEAD~1 --signoff
-          gh pr create --head "bundle-update/${today}" --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
+      - name: Create Pull Request
+        run: |       
+          gh pr create --base master --head "bundle-update/${today}" --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
