--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git branch bundle-update
           git add fluent-package/Gemfile.lock
-          git commit -m "Update Gemfile.lock"
+          git commit --message "Update Gemfile.lock" --signoff
           git push --force-with-lease origin bundle-update
       - name: Create Pull Request
         run: |       
