--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -29,7 +29,7 @@ jobs:
           git switch bundle-update
           git add fluent-package/Gemfile.lock
           git commit --message "Update Gemfile.lock" --signoff
-          git push --set-upstream origin bundle-update
+          git push --force-with-lease origin bundle-update
           # gh pr create --base master --head bundle-update --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
           gh pr create --fill
       # - name: Create Pull Request
