--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -1,4 +1,4 @@
-name: Windows Bundle Update
+name: Maintenance - Bundle Update
 
 on:
   workflow_dispatch
@@ -19,19 +19,14 @@ jobs:
           cd fluent-package
           gem install bundler:2.3.27
           bundle _2.3.27_ update -j 4
-      - name: git config
+      - name: Create Pull Request
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - name: git commit
-        run: |
           git branch bundle-update
           git switch bundle-update
           git add fluent-package/Gemfile.lock
           git commit --message "Update Gemfile.lock" --signoff
           git push --force-with-lease origin bundle-update
-          gh pr create --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
-          # gh pr create --fill
-      # - name: Create Pull Request
-      #   run: |       
-      #     gh pr create --base master --head bundle-update --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow\nRef: ${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
+          gh pr create --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow"
+  
