--- a/.github/workflows/windows-bundle-update.yml
+++ b/.github/workflows/windows-bundle-update.yml
@@ -23,10 +23,10 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git branch bundle-update
-          git switch bundle-update
+          git branch maintenance/bundle-update
+          git switch maintenance/bundle-update
           git add fluent-package/Gemfile.lock
           git commit --message "Update Gemfile.lock" --signoff
-          git push --force-with-lease origin bundle-update
+          git push --force-with-lease origin maintenance/bundle-update
           gh pr create --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow"
   
