--- a/.github/workflows/maintenance-bundle-update.yml
+++ b/.github/workflows/maintenance-bundle-update.yml
@@ -21,12 +21,14 @@ jobs:
           bundle _2.3.27_ update -j 4
       - name: Create Pull Request
         run: |
+          $today=Get-Date -Format "yyyy-MM-dd"
+          $branch="maintenance/bundle-update/${today}"
+
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git branch maintenance/bundle-update
-          git switch maintenance/bundle-update
+          git switch --create $branch
           git add fluent-package/Gemfile.lock
           git commit --message "Update Gemfile.lock" --signoff
-          git push --force-with-lease origin maintenance/bundle-update
+          git push --force-with-lease origin $branch
           gh pr create --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow"
   
