--- a/.github/workflows/maintenance-bundle-update.yml
+++ b/.github/workflows/maintenance-bundle-update.yml
@@ -30,5 +30,5 @@ jobs:
           git add fluent-package/Gemfile.lock
           git commit --message "Update Gemfile.lock" --signoff
           git push origin $branch
-          gh pr create --title "Update Gemfile.lock" --body "Automated changes by Bundle Update workflow"
+          gh pr create --title "Update Gemfile.lock" --body "Update Gemfile.lock by maintenance workflow"
   
