--- a/.github/workflows/maintenance-bundle-update.yml
+++ b/.github/workflows/maintenance-bundle-update.yml
@@ -28,7 +28,7 @@ jobs:
           git config user.email github-actions@github.com
           git switch --create $branch
           git add fluent-package/Gemfile.lock
-          git commit --message "Update Gemfile.lock" --signoff
+          git commit --message "Update Gemfile.lock" --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>" --signoff
           git push origin $branch
           gh pr create --title "Update Gemfile.lock" --body "Update Gemfile.lock by maintenance workflow"
   
