--- a/.github/workflows/maintenance-bundle-update.yml
+++ b/.github/workflows/maintenance-bundle-update.yml
@@ -3,6 +3,9 @@ name: Maintenance - Bundle Update
 on:
   workflow_dispatch
 
+permissions:
+  pull-requests: write
+
 jobs:
   bundle-update:
     runs-on: windows-latest
