--- a/fluent-package/yum/fluent-package.spec.in
+++ b/fluent-package/yum/fluent-package.spec.in
@@ -157,6 +157,7 @@ mkdir -p %{buildroot}%{_localstatedir}/run/@PACKAGE_DIR@
 mkdir -p %{buildroot}%{_localstatedir}/log/@PACKAGE_DIR@
 mkdir -p %{buildroot}%{_localstatedir}/log/@PACKAGE_DIR@/buffer
 mkdir -p %{buildroot}%{_sysconfdir}/@PACKAGE_DIR@/plugin
+mkdir -p %{buildroot}%{_sysconfdir}/@PACKAGE_DIR@/conf.d
 mkdir -p %{buildroot}/tmp/@PACKAGE_DIR@
 
 %pre
